Fixed all deprecated java code